# name: test_derivator_data_precision_demands
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,1.0147486541306483
  2018-01-01 00:01:00+00:00,1.0423298174078832
  2018-01-01 00:02:00+00:00,0.9826790971839656
  2018-01-01 00:03:00+00:00,0.9740990038070958
  2018-01-01 00:04:00+00:00,1.0031735739881902
  2018-01-01 00:05:00+00:00,1.0608988630390297
  2018-01-01 00:06:00+00:00,1.0814907018224251
  2018-01-01 00:07:00+00:00,1.016759318374981
  2018-01-01 00:08:00+00:00,0.927899937781516
  2018-01-01 00:09:00+00:00,1.0113579249405171
  2018-01-01 00:10:00+00:00,1.0091863052277854
  2018-01-01 00:11:00+00:00,1.0444306814520334
  2018-01-01 00:12:00+00:00,0.9876362959010692
  2018-01-01 00:13:00+00:00,0.9753847451372288
  2018-01-01 00:14:00+00:00,1.0710869503371527
  2018-01-01 00:15:00+00:00,0.9984436656638308
  2018-01-01 00:16:00+00:00,1.0249640266001738
  2018-01-01 00:17:00+00:00,0.9843496155670712
  2018-01-01 00:18:00+00:00,0.9699582335369322
  2018-01-01 00:19:00+00:00,0.9961449033241612
  
  '''
# ---
# name: test_derivator_data_precision_flows
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,1.0147486541306483
  2018-01-01 00:01:00+00:00,1.0423298174078832
  2018-01-01 00:02:00+00:00,0.9826790971839656
  2018-01-01 00:03:00+00:00,0.9740990038070958
  2018-01-01 00:04:00+00:00,1.0031735739881902
  2018-01-01 00:05:00+00:00,1.0608988630390297
  2018-01-01 00:06:00+00:00,1.0814907018224251
  2018-01-01 00:07:00+00:00,1.016759318374981
  2018-01-01 00:08:00+00:00,0.927899937781516
  2018-01-01 00:09:00+00:00,1.0113579249405171
  2018-01-01 00:10:00+00:00,1.0091863052277854
  2018-01-01 00:11:00+00:00,1.0444306814520334
  2018-01-01 00:12:00+00:00,0.9876362959010692
  2018-01-01 00:13:00+00:00,0.9753847451372288
  2018-01-01 00:14:00+00:00,1.0710869503371527
  2018-01-01 00:15:00+00:00,0.9984436656638308
  2018-01-01 00:16:00+00:00,1.0249640266001738
  2018-01-01 00:17:00+00:00,0.9843496155670712
  2018-01-01 00:18:00+00:00,0.9699582335369322
  2018-01-01 00:19:00+00:00,0.9961449033241612
  
  '''
# ---
# name: test_derivator_data_precision_levels
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,1.0147486541306483
  2018-01-01 00:01:00+00:00,1.0423298174078832
  2018-01-01 00:02:00+00:00,0.9826790971839656
  2018-01-01 00:03:00+00:00,0.9740990038070958
  2018-01-01 00:04:00+00:00,1.0031735739881902
  2018-01-01 00:05:00+00:00,1.0608988630390297
  2018-01-01 00:06:00+00:00,1.0814907018224251
  2018-01-01 00:07:00+00:00,1.016759318374981
  2018-01-01 00:08:00+00:00,0.927899937781516
  2018-01-01 00:09:00+00:00,1.0113579249405171
  2018-01-01 00:10:00+00:00,1.0091863052277854
  2018-01-01 00:11:00+00:00,1.0444306814520334
  2018-01-01 00:12:00+00:00,0.9876362959010692
  2018-01-01 00:13:00+00:00,0.9753847451372288
  2018-01-01 00:14:00+00:00,1.0710869503371527
  2018-01-01 00:15:00+00:00,0.9984436656638308
  2018-01-01 00:16:00+00:00,1.0249640266001738
  2018-01-01 00:17:00+00:00,0.9843496155670712
  2018-01-01 00:18:00+00:00,0.9699582335369322
  2018-01-01 00:19:00+00:00,0.9961449033241612
  
  '''
# ---
# name: test_derivator_data_precision_pressures
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,1.0147486541306483
  2018-01-01 00:01:00+00:00,1.0423298174078832
  2018-01-01 00:02:00+00:00,0.9826790971839656
  2018-01-01 00:03:00+00:00,0.9740990038070958
  2018-01-01 00:04:00+00:00,1.0031735739881902
  2018-01-01 00:05:00+00:00,1.0608988630390297
  2018-01-01 00:06:00+00:00,1.0814907018224251
  2018-01-01 00:07:00+00:00,1.016759318374981
  2018-01-01 00:08:00+00:00,0.927899937781516
  2018-01-01 00:09:00+00:00,1.0113579249405171
  2018-01-01 00:10:00+00:00,1.0091863052277854
  2018-01-01 00:11:00+00:00,1.0444306814520334
  2018-01-01 00:12:00+00:00,0.9876362959010692
  2018-01-01 00:13:00+00:00,0.9753847451372288
  2018-01-01 00:14:00+00:00,1.0710869503371527
  2018-01-01 00:15:00+00:00,0.9984436656638308
  2018-01-01 00:16:00+00:00,1.0249640266001738
  2018-01-01 00:17:00+00:00,0.9843496155670712
  2018-01-01 00:18:00+00:00,0.9699582335369322
  2018-01-01 00:19:00+00:00,0.9961449033241612
  
  '''
# ---
# name: test_derivator_data_sampling
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,0
  2018-01-01 00:09:00+00:00,9
  2018-01-01 00:18:00+00:00,18
  
  '''
# ---
# name: test_derivator_data_sensitivity_big_bottom_levels
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,0.0
  2018-01-01 00:01:00+00:00,0.0
  2018-01-01 00:02:00+00:00,2.0
  2018-01-01 00:03:00+00:00,2.0
  2018-01-01 00:04:00+00:00,4.0
  2018-01-01 00:05:00+00:00,4.0
  2018-01-01 00:06:00+00:00,6.0
  2018-01-01 00:07:00+00:00,6.0
  2018-01-01 00:08:00+00:00,8.0
  2018-01-01 00:09:00+00:00,8.0
  2018-01-01 00:10:00+00:00,10.0
  2018-01-01 00:11:00+00:00,10.0
  2018-01-01 00:12:00+00:00,12.0
  2018-01-01 00:13:00+00:00,12.0
  2018-01-01 00:14:00+00:00,14.0
  2018-01-01 00:15:00+00:00,14.0
  2018-01-01 00:16:00+00:00,16.0
  2018-01-01 00:17:00+00:00,16.0
  2018-01-01 00:18:00+00:00,18.0
  2018-01-01 00:19:00+00:00,18.0
  
  '''
# ---
# name: test_derivator_data_sensitivity_big_top_levels
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,0.0
  2018-01-01 00:01:00+00:00,2.0
  2018-01-01 00:02:00+00:00,2.0
  2018-01-01 00:03:00+00:00,4.0
  2018-01-01 00:04:00+00:00,4.0
  2018-01-01 00:05:00+00:00,6.0
  2018-01-01 00:06:00+00:00,6.0
  2018-01-01 00:07:00+00:00,8.0
  2018-01-01 00:08:00+00:00,8.0
  2018-01-01 00:09:00+00:00,10.0
  2018-01-01 00:10:00+00:00,10.0
  2018-01-01 00:11:00+00:00,12.0
  2018-01-01 00:12:00+00:00,12.0
  2018-01-01 00:13:00+00:00,14.0
  2018-01-01 00:14:00+00:00,14.0
  2018-01-01 00:15:00+00:00,16.0
  2018-01-01 00:16:00+00:00,16.0
  2018-01-01 00:17:00+00:00,18.0
  2018-01-01 00:18:00+00:00,18.0
  2018-01-01 00:19:00+00:00,20.0
  
  '''
# ---
# name: test_derivator_data_sensitivity_small_bottom_levels
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,0.0
  2018-01-01 00:01:00+00:00,0.3
  2018-01-01 00:02:00+00:00,0.7000000000000001
  2018-01-01 00:03:00+00:00,1.1
  2018-01-01 00:04:00+00:00,1.4
  2018-01-01 00:05:00+00:00,1.8
  2018-01-01 00:06:00+00:00,2.2
  2018-01-01 00:07:00+00:00,2.5
  2018-01-01 00:08:00+00:00,2.9000000000000004
  2018-01-01 00:09:00+00:00,3.3000000000000003
  2018-01-01 00:10:00+00:00,3.6
  2018-01-01 00:11:00+00:00,4.0
  2018-01-01 00:12:00+00:00,4.4
  2018-01-01 00:13:00+00:00,4.7
  2018-01-01 00:14:00+00:00,5.1000000000000005
  2018-01-01 00:15:00+00:00,5.5
  2018-01-01 00:16:00+00:00,5.800000000000001
  2018-01-01 00:17:00+00:00,6.2
  2018-01-01 00:18:00+00:00,6.6000000000000005
  2018-01-01 00:19:00+00:00,7.0
  
  '''
# ---
# name: test_derivator_data_sensitivity_small_top_levels
  '''
  Timestamp,J-02
  2018-01-01 00:00:00+00:00,0.0
  2018-01-01 00:01:00+00:00,0.4
  2018-01-01 00:02:00+00:00,0.8
  2018-01-01 00:03:00+00:00,1.2000000000000002
  2018-01-01 00:04:00+00:00,1.5
  2018-01-01 00:05:00+00:00,1.9
  2018-01-01 00:06:00+00:00,2.3000000000000003
  2018-01-01 00:07:00+00:00,2.6
  2018-01-01 00:08:00+00:00,3.0
  2018-01-01 00:09:00+00:00,3.4000000000000004
  2018-01-01 00:10:00+00:00,3.7
  2018-01-01 00:11:00+00:00,4.1000000000000005
  2018-01-01 00:12:00+00:00,4.5
  2018-01-01 00:13:00+00:00,4.800000000000001
  2018-01-01 00:14:00+00:00,5.2
  2018-01-01 00:15:00+00:00,5.6000000000000005
  2018-01-01 00:16:00+00:00,5.9
  2018-01-01 00:17:00+00:00,6.300000000000001
  2018-01-01 00:18:00+00:00,6.7
  2018-01-01 00:19:00+00:00,7.0
  
  '''
# ---
# name: test_derivator_model
  dict({
    'comment': 'WaterNetworkModel - all values given in SI units',
    'controls': list([
    ]),
    'curves': list([
    ]),
    'links': list([
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.6,
        'end_node_name': 'J-02',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-02',
        'roughness': 127.0,
        'start_node_name': 'J-03',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-03',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-03',
        'roughness': 127.0,
        'start_node_name': 'J-04',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-04',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-04',
        'roughness': 127.0,
        'start_node_name': 'J-05',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-05',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-05',
        'roughness': 127.0,
        'start_node_name': 'J-06',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-06',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-06',
        'roughness': 127.0,
        'start_node_name': 'J-07',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.6,
        'end_node_name': 'J-02',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-07',
        'roughness': 127.0,
        'start_node_name': 'J-08',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-03',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-08',
        'roughness': 127.0,
        'start_node_name': 'J-09',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-08',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-13',
        'roughness': 127.0,
        'start_node_name': 'J-09',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-04',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-09',
        'roughness': 127.0,
        'start_node_name': 'J-10',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-09',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-14',
        'roughness': 127.0,
        'start_node_name': 'J-10',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-05',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-10',
        'roughness': 127.0,
        'start_node_name': 'J-11',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-10',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-15',
        'roughness': 127.0,
        'start_node_name': 'J-11',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-06',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-11',
        'roughness': 127.0,
        'start_node_name': 'J-12',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-11',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-16',
        'roughness': 127.0,
        'start_node_name': 'J-12',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-07',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-12',
        'roughness': 127.0,
        'start_node_name': 'J-13',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-12',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-17',
        'roughness': 127.0,
        'start_node_name': 'J-13',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-08',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-18',
        'roughness': 127.0,
        'start_node_name': 'J-14',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-09',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-19',
        'roughness': 127.0,
        'start_node_name': 'J-15',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-14',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-24',
        'roughness': 127.0,
        'start_node_name': 'J-15',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-10',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-20',
        'roughness': 127.0,
        'start_node_name': 'J-16',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-15',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-25',
        'roughness': 127.0,
        'start_node_name': 'J-16',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-11',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-21',
        'roughness': 127.0,
        'start_node_name': 'J-17',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-16',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-26',
        'roughness': 127.0,
        'start_node_name': 'J-17',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-12',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-22',
        'roughness': 127.0,
        'start_node_name': 'J-18',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-17',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-27',
        'roughness': 127.0,
        'start_node_name': 'J-18',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-13',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-23',
        'roughness': 127.0,
        'start_node_name': 'J-19',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-18',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-28',
        'roughness': 127.0,
        'start_node_name': 'J-19',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.45,
        'end_node_name': 'J-14',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-29',
        'roughness': 127.0,
        'start_node_name': 'J-20',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-15',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-30',
        'roughness': 127.0,
        'start_node_name': 'J-21',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-20',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-35',
        'roughness': 127.0,
        'start_node_name': 'J-21',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-16',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-31',
        'roughness': 127.0,
        'start_node_name': 'J-22',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-21',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-36',
        'roughness': 127.0,
        'start_node_name': 'J-22',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-17',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-32',
        'roughness': 127.0,
        'start_node_name': 'J-23',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-22',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-37',
        'roughness': 127.0,
        'start_node_name': 'J-23',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-18',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-33',
        'roughness': 127.0,
        'start_node_name': 'J-24',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-23',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-38',
        'roughness': 127.0,
        'start_node_name': 'J-24',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-19',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-34',
        'roughness': 127.0,
        'start_node_name': 'J-25',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-24',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-39',
        'roughness': 127.0,
        'start_node_name': 'J-25',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-20',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-40',
        'roughness': 127.0,
        'start_node_name': 'J-26',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-21',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-41',
        'roughness': 127.0,
        'start_node_name': 'J-27',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-26',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-46',
        'roughness': 127.0,
        'start_node_name': 'J-27',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-22',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-42',
        'roughness': 127.0,
        'start_node_name': 'J-28',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-27',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-47',
        'roughness': 127.0,
        'start_node_name': 'J-28',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-23',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-43',
        'roughness': 127.0,
        'start_node_name': 'J-29',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-28',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-48',
        'roughness': 127.0,
        'start_node_name': 'J-29',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-24',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-44',
        'roughness': 127.0,
        'start_node_name': 'J-30',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-29',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-49',
        'roughness': 127.0,
        'start_node_name': 'J-30',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-25',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 2000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-45',
        'roughness': 127.0,
        'start_node_name': 'J-31',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.3,
        'end_node_name': 'J-30',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 1000.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-50',
        'roughness': 127.0,
        'start_node_name': 'J-31',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
      dict({
        'bulk_coeff': None,
        'check_valve': False,
        'diameter': 0.6,
        'end_node_name': 'J-02',
        'initial_setting': None,
        'initial_status': 'Open',
        'length': 100.0,
        'link_type': 'Pipe',
        'minor_loss': 0.0,
        'name': 'P-01',
        'roughness': 127.0,
        'start_node_name': 'J-01',
        'tag': None,
        'vertices': list([
        ]),
        'wall_coeff': None,
      }),
    ]),
    'name': 'test_data/datasets/test1-2f3aade7670a4ceb209cc79b2580de8d/model.inp',
    'nodes': list([
      dict({
        'coordinates': tuple(
          2.0,
          -1.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.014748654131,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-02',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          2.0,
          -2.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.042329817408,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-03',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          2.0,
          -3.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.017320902816,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-04',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          2.0,
          -4.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.025900996193,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-05',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          2.0,
          -5.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.0031735739882,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-06',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          2.0,
          -6.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.060898863039,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-07',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -1.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.081490701822,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-08',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -2.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.016759318375,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-09',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -3.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.072100062218,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-10',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -4.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.011357924941,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-11',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -5.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.0091863052278,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-12',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          4.0,
          -6.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.044430681452,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-13',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -1.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.012363704099,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-14',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -2.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.024615254863,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-15',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -3.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.071086950337,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-16',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -4.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.0015563343362,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-17',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -5.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.0249640266,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-18',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          6.0,
          -6.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.015650384433,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-19',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -1.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.030041766463,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-20',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -2.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.0038550966758,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-21',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -3.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.019056686488,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-22',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -4.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.00058208625034,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-23',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -5.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.010865730295,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-24',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          8.0,
          -6.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.047876551301,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-25',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -1.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.011338508119,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-26',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -2.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.0042914680928,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-27',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -3.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.0059639064126,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-28',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -4.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': 0.015722959519,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-29',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -5.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.016487397163,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-30',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'coordinates': tuple(
          10.0,
          -6.0,
        ),
        'demand_timeseries_list': list([
          dict({
            'base_val': 0.05,
            'category': None,
            'pattern_name': '',
          }),
        ]),
        'elevation': -0.02134571377,
        'emitter_coefficient': None,
        'initial_quality': 0.0,
        'minimum_pressure': None,
        'name': 'J-31',
        'node_type': 'Junction',
        'pressure_exponent': None,
        'required_pressure': None,
        'tag': None,
      }),
      dict({
        'base_head': 52.0,
        'coordinates': tuple(
          0.0,
          1.0,
        ),
        'head_pattern_name': None,
        'initial_quality': 0.0,
        'name': 'J-01',
        'node_type': 'Reservoir',
        'tag': None,
      }),
    ]),
    'options': dict({
      'energy': dict({
        'demand_charge': None,
        'global_efficiency': None,
        'global_pattern': None,
        'global_price': 0.0,
      }),
      'graphics': dict({
        'dimensions': list([
          '0',
          '0',
          '10',
          '10',
        ]),
        'image_filename': None,
        'map_filename': None,
        'offset': None,
        'units': 'NONE',
      }),
      'hydraulic': dict({
        'accuracy': 1e-09,
        'checkfreq': 2,
        'damplimit': 0.0,
        'demand_model': 'DDA',
        'demand_multiplier': 1.0,
        'emitter_exponent': 1.0,
        'flowchange': 0.0,
        'headerror': 0.0,
        'headloss': 'H-W',
        'hydraulics': None,
        'hydraulics_filename': None,
        'inpfile_pressure_units': None,
        'inpfile_units': 'LPS',
        'maxcheck': 10,
        'minimum_pressure': 0.0,
        'pattern': None,
        'pressure_exponent': 0.5,
        'required_pressure': 0.07,
        'specific_gravity': 1.0,
        'trials': 40,
        'unbalanced': 'STOP',
        'unbalanced_value': None,
        'viscosity': 1.0,
      }),
      'quality': dict({
        'chemical_name': 'CHEMICAL',
        'diffusivity': 1.0,
        'inpfile_units': 'mg/L',
        'parameter': 'NONE',
        'tolerance': 0.01,
        'trace_node': None,
      }),
      'reaction': dict({
        'bulk_coeff': 0.0,
        'bulk_order': 1.0,
        'limiting_potential': None,
        'roughness_correl': None,
        'tank_order': 1.0,
        'wall_coeff': 0.0,
        'wall_order': 1.0,
      }),
      'report': dict({
        'energy': 'NO',
        'links': False,
        'nodes': False,
        'pagesize': None,
        'param_opts': dict({
          'demand': dict({
          }),
          'diameter': dict({
          }),
          'elevation': dict({
          }),
          'f-factor': dict({
          }),
          'flow': dict({
          }),
          'head': dict({
          }),
          'headloss': dict({
          }),
          'length': dict({
          }),
          'position': dict({
          }),
          'pressure': dict({
          }),
          'quality': dict({
          }),
          'reaction': dict({
          }),
          'setting': dict({
          }),
          'velocity': dict({
          }),
        }),
        'report_filename': None,
        'report_params': dict({
          'demand': True,
          'diameter': False,
          'elevation': False,
          'f-factor': False,
          'flow': True,
          'head': True,
          'headloss': True,
          'length': False,
          'position': False,
          'pressure': True,
          'quality': True,
          'reaction': False,
          'setting': False,
          'velocity': True,
        }),
        'status': 'NO',
        'summary': 'YES',
      }),
      'time': dict({
        'duration': 0.0,
        'hydraulic_timestep': 3600,
        'pattern_interpolation': False,
        'pattern_start': 0.0,
        'pattern_timestep': 3600,
        'quality_timestep': 360,
        'report_start': 0.0,
        'report_timestep': 3600,
        'rule_timestep': 360,
        'start_clocktime': 0.0,
        'statistic': 'NONE',
      }),
      'user': dict({
      }),
    }),
    'patterns': list([
    ]),
    'sources': list([
    ]),
    'version': 'wntr-0.5.0',
  })
# ---
